# burke-bot

./: README.md  bot.py  league_match_service.py  league_response_helper.py  league_service.py  main.py  match_v5_service.py  pyproject.toml
src/: bot.py  league_response_helper.py  league_service.py  match_v5_service.py
